# traderview

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/traderview-core/: Cargo.toml
crates/traderview-core/src/: abandoned_baby.rs  abc_pattern.rs  abcd_pattern.rs  absorption_detector.rs  acceleration_deceleration.rs  accrued_interest.rs  accumulation_distribution_line.rs  accumulation_distribution_oscillator.rs  accumulation_swing_index.rs  accumulation_volume_pattern.rs  active_share.rs  adf_standalone.rs  adr_premium.rs  adx.rs  age_based_allocation.rs  alert_engine.rs  algo_backtest.rs  algo_backtest_mc.rs  algo_optimize.rs  algo_regime_attribution.rs  algo_strategy_portfolio.rs  algo_tournament.rs  algo_walk_forward.rs  alligator.rs  allowance_doubtful.rs  alma_legoux.rs  almgren_chriss.rs  alpha_horizon.rs  alphatrend.rs  altman_z_score.rs  american_binomial.rs  american_option_lsmc.rs  amihud_illiquidity.rs  anchored_momentum.rs  anchored_obv.rs  anchored_vwap.rs  anderson_darling_normality.rs  andrews_pitchfork.rs  anti_setup.rs  apr_apy.rs  (+1030 more)
crates/traderview-core/src/algo_strategies/: adx_pullback.rs  bb_squeeze.rs  connors_rsi2.rs  donchian_trend.rs  gap_fade.rs  heikin_ashi_trend.rs  ichimoku_cloud.rs  keltner_breakout.rs  ma_cross_adx.rs  macd_cross.rs  mean_reversion.rs  mod.rs  momentum.rs  nr7_breakout.rs  orb.rs  order_block_sweep.rs  pairs.rs  pead.rs  rsi_divergence_reversal.rs  supertrend.rs  ttm_squeeze.rs  types.rs  vwap_scalp.rs
crates/traderview-core/tests/: fuzz_recent_primitives.rs  sentiment_lexicon_behavior.rs
crates/traderview-db/: Cargo.toml
crates/traderview-db/examples/: alpaca_ws_probe.rs  gamma_check.rs  migrate_check.rs  options_check.rs  quote_summary_check.rs
crates/traderview-db/src/: accounts.rs  accounts_overview.rs  after_hours.rs  alerts.rs  algo.rs  algo_engine.rs  algo_runner.rs  alpaca_pump.rs  alpaca_trading.rs  annuity_pv_fv.rs  api_tokens.rs  auto_loan.rs  autotrade_exits.rs  backtest_presets.rs  barista_fire.rs  beneish.rs  bond_tent.rs  breadth.rs  breadth_divergence.rs  broker_dispatcher.rs  brrrr.rs  candidates.rs  cape_indicator.rs  car_tco.rs  carryover.rs  catalyst_correlator.rs  catalysts.rs  cd_ladder.rs  chart_drawings.rs  coast_fire.rs  college_529.rs  comments.rs  compare.rs  confluence.rs  confluence_autotrade.rs  corr_matrix.rs  correlation.rs  credit_utilization.rs  crypto.rs  csv_wizard.rs  (+163 more)
crates/traderview-db/tests/: algo_engine_paper.rs  alpaca_trading_client.rs  ibkr_trading_client.rs  integration.rs  schwab_trading_client.rs  tastytrade_trading_client.rs  tradier_trading_client.rs
crates/traderview-expense/: Cargo.toml
crates/traderview-expense/examples/: probe_real.rs
crates/traderview-expense/src/: abandoned_property_handling.rs  advance_rent_limit.rs  adverse_action_notice.rs  adverse_possession_claim.rs  amazon.rs  apple.rs  application_fees.rs  asbestos_disclosure.rs  balcony_inspection.rs  bedbug_disclosure.rs  bedbug_extermination_cost.rs  boa.rs  broker_fee_allocation.rs  carpet_replacement_useful_life.rs  chase.rs  commercial_lease_cam_charge_disclosure.rs  commercial_lease_personal_guaranty_enforceability.rs  condominium_conversion_protection.rs  contractor_1099.rs  cooling_requirements.rs  cosigner_rules.rs  cost_segregation.rs  credit_check_authorization.rs  crime_victim_termination.rs  crypto_tax.rs  damage_deduction_itemization.rs  death_in_unit_disclosure.rs  dedup.rs  demolition_tenant_notice.rs  deposit_interest.rs  deposit_return_windows.rs  depreciation.rs  detector_requirements.rs  disposition.rs  dog_breed_restriction_ban.rs  drug_eviction.rs  duty_to_mitigate_damages.rs  dv_survivor_lock_change.rs  dv_termination.rs  emotional_support_animal_documentation.rs  (+728 more)
crates/traderview-import/: Cargo.toml
crates/traderview-import/src/: brokers.rs  lib.rs  mapping.rs  webull.rs
crates/traderview-import/tests/: option_vs_equity_multiplier_pin.rs  tradervue_parity.rs
crates/traderview-ocr/: Cargo.toml
crates/traderview-ocr/examples/: probe_pdf.rs
crates/traderview-ocr/src/: engine.rs  lib.rs  matcher.rs  parse.rs  pdf.rs  tax_forms.rs
crates/traderview-ocr/tests/: category_classifier_substring_collisions.rs
crates/traderview-ocr/tests/fixtures/: hd.ocr.txt  lowes.ocr.txt  tsc.ocr.txt
crates/traderview-tax/: Cargo.toml
crates/traderview-tax/src/: amt.rs  brackets.rs  capital_gains.rs  credits.rs  education_credits.rs  engine.rs  home_office.rs  late_penalty.rs  lib.rs  mileage.rs  niit.rs  qbi.rs  retirement_limits.rs  safe_harbor.rs  se_tax.rs  section_179.rs  what_if.rs
crates/traderview-tax/tests/: edge_invariants.rs  qbi_net_cap_gain_floor.rs  qbi_sstb_phase_in.rs  scenarios.rs
crates/traderview-web/: Cargo.toml
crates/traderview-web/src/: auth.rs  background.rs  broker_routes.rs  budget_routes.rs  business_routes.rs  error.rs  expense_routes.rs  lib.rs  log_mw.rs  merchant.rs  rate_limit.rs  realtime.rs  receipt_routes.rs  rental_routes.rs  risk_gate_routes.rs  routes.rs  state.rs  tax_filing_routes.rs  tax_pdf.rs  tax_routes.rs
crates/traderview-web/src/routes/: accounts.rs  accounts_overview.rs  after_hours.rs  alerts.rs  algo.rs  analysis.rs  annuity_pv_fv.rs  api_tokens.rs  auth.rs  auto_loan.rs  backtest.rs  backtest_presets.rs  barista_fire.rs  bond_tent.rs  breadth.rs  breadth_divergence.rs  calc.rs  cape_indicator.rs  car_tco.rs  carryover.rs  catalyst_correlations.rs  catalysts.rs  cd_ladder.rs  chart_drawings.rs  chart_indicators.rs  charts.rs  client_errors.rs  coast_fire.rs  college_529.rs  comments.rs  community.rs  compare.rs  confluence.rs  confluence_autotrade.rs  corr_matrix.rs  credit_utilization.rs  crypto.rs  csv_wizard.rs  custom_indicators.rs  darkpool.rs  (+136 more)
crates/traderview-web/tests/: w2_to_engine.rs
docs/: index.html  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-get-api-config.toml  allow-get-log-path.toml  allow-get-process-stats.toml  allow-read-log-tail.toml
src-tauri/src/: lib.rs  main.rs
(+1642 files in other folders)
