[workspace]
members = [
    "crates/traderview-core",
    "crates/traderview-db",
    "crates/traderview-import",
    "crates/traderview-expense",
    "crates/traderview-ocr",
    "crates/traderview-tax",
    "crates/traderview-web",
    "src-tauri",
]
resolver = "2"

# Style lints we suppress workspace-wide because the underlying pattern is
# deliberate, not a defect:
#   - inconsistent_digit_grouping: numeric literals like `500_00` encode
#     cents → $X.YY by intent; canonical 3-digit grouping would obscure that.
#   - too_many_arguments: axum route handlers naturally take many extractors;
#     splitting just to satisfy the lint hurts readability.
#   - assertions_on_constants: some `assert!(true, "...")` calls are used as
#     intentional `unreachable_unless` markers in tests.
#   - manual_range_contains: explicit `x >= a && x <= b` is often clearer
#     than `(a..=b).contains(&x)` for inclusive bounds checks.
#   - type_complexity: a few report aggregations have intentionally rich
#     return types; introducing `type` aliases for one-off shapes is churn.
#   - large_enum_variant: domain enums sometimes mix small and large
#     variants; boxing changes the public API for cosmetic gain.
[workspace.lints.clippy]
inconsistent_digit_grouping = "allow"
too_many_arguments = "allow"
assertions_on_constants = "allow"
manual_range_contains = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/traderview"
homepage = "https://menketechnologies.github.io/traderview/"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "rust_decimal",
] }
postgresql_embedded = { version = "0.20", default-features = false, features = ["rustls", "theseus", "tokio"] }

# IDs / time / money
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# HTTP server
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "normalize-path"] }

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Parsing
csv = "1"
bytes = "1"
regex = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp"] }
lopdf = "0.34"
printpdf = { version = "0.7", default-features = false }
calamine = "0.26"

# HTTP client (price-data fetcher)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# Tiny utilities
once_cell = "1"
dashmap = "6"

# WebSocket client (live ticks from Finnhub)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# Direct rustls dep so we can install a process-wide crypto provider at
# startup — without this, every TLS handshake (live-ticks WS, Yahoo
# fetcher, Finnhub REST) panics on rustls 0.23 with
# "Could not automatically determine the process-level CryptoProvider".
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
futures-util = "0.3"

# RSS / XML parsing (Nasdaq halts, SEC EDGAR)
quick-xml = { version = "0.36", features = ["serialize"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

# Test mocks (HTTP) — Alpaca trading client integration tests
wiremock = "0.6"

[profile.dev]
opt-level = 1
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
