[package]
name = "traderview-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TraderVue-style trading journal desktop app (Tauri v2 + embedded Postgres)"

[lib]
name = "traderview_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "traderview-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
traderview-core = { path = "../crates/traderview-core" }
traderview-db = { path = "../crates/traderview-db" }
traderview-import = { path = "../crates/traderview-import" }
traderview-web = { path = "../crates/traderview-web", default-features = false }

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
# Propagate the OCR engine flip to traderview-web/traderview-ocr.
# Build with `cargo tauri dev --features ocr-engine` to enable receipt OCR
# in the desktop app. Heavy first-time compile (~5 min) — leave off until needed.
default = []
ocr-engine = ["traderview-web/ocr-engine"]
