[package]
name = "traderview-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "sqlx pool factory, migrations, and embedded-Postgres lifecycle for traderview"

[dependencies]
traderview-core = { path = "../traderview-core" }
traderview-import = { path = "../traderview-import" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
postgresql_embedded = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
quick-xml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
