[package]
name = "traderview-expense"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Business expense CSV parsers, merchant rules, transfer dedup for traderview"

[dependencies]
traderview-core = { path = "../traderview-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = "1"
calamine = { workspace = true }
lopdf = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
