[package]
name = "traderview-ocr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust OCR (PaddleOCR via tract-onnx) + PDF text extraction for traderview receipts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
lopdf = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Pure-Rust OCR engine — wraps PaddleOCR DBNet (text detection) + SVTR (text
# recognition) ONNX models via tract-onnx. Zero C/C++ dependencies.
# Model files are NOT bundled — they're downloaded into the app data dir on
# first OCR call. See `engine.rs` for the expected layout.
pure-onnx-ocr-sync = { version = "0.1", optional = true }

[features]
# OFF by default: the crate builds without the PaddleOCR runtime so workspace
# `cargo build` doesn't pull tract + ndarray for users who don't care about
# receipt OCR. Enable with `--features engine` to wire the real engine.
# The PDF text-layer fast path works regardless of this feature.
default = []
engine = ["dep:pure-onnx-ocr-sync"]
