[package]
name = "traderview-ocr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust OCR (PaddleOCR via tract-onnx) + PDF text extraction for traderview receipts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
lopdf = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# OCR delegates to the system `tesseract` CLI via stdin/stdout pipes
# (`engine.rs`). No native Rust binding — `brew install tesseract` (macOS)
# or `apt install tesseract-ocr tesseract-ocr-eng` (Linux) ships both the
# binary and the eng.traineddata trained model. We pin tesseract 5.x+ at
# runtime (the `--oem 1` LSTM-only mode requires 4.0+; we use 5 features).
# The `engine` feature stays for back-compat — empty now, so `--features
# ocr-engine` upstream is a no-op.

[features]
default = []
engine = []

[lints]
workspace = true
