[package]
name = "traderview-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "axum router + JWT auth + server binary for traderview"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
traderview-core = { path = "../traderview-core" }
traderview-db = { path = "../traderview-db" }
traderview-import = { path = "../traderview-import" }
traderview-expense = { path = "../traderview-expense" }
traderview-ocr = { path = "../traderview-ocr", default-features = false }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
printpdf = { workspace = true }

[features]
# Receipt OCR ships ON. pure-onnx-ocr-sync pulls tract-onnx + ndarray
# (~5 min cold compile), but shipping OCR off-by-default left both the
# desktop binary AND the standalone `server` binary hitting
# OcrError::EngineDisabled on the first receipt upload. Opt OUT with
# `cargo build -p traderview-web --no-default-features` if you need a
# faster CI build that doesn't exercise the OCR path.
default = ["ocr-engine"]
ocr-engine = ["traderview-ocr/engine"]

[lints]
workspace = true
